# opengl-cube

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  InputSystem.cpp  InputSystem.h  LICENSE  Light.h  Mesh.cpp  Mesh.h  Projection.h  README.md  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Time.cpp  Time.h  Window.h  cube.frag  cube.vert  embed_shaders.cmake  embed_texture.cmake  main.cpp
.github/workflows/: release.yml
include/glad/: glad.h
include/stb/: stb_image.h
src/: glad.c
